--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 	<header>
 	    <nav>
 	      <ul>
-	        <li>Home</li>
+	        <li><a href="index.html">Home</a></li>
 	        <li><a href="record.html">Record</a></li>
-	        <li><a href="prediction.html">Prediction</a></li>
+			<li><a href="idea.html">Our-Idea</a></li>
+			<li><a href="Videos.html">Demo-Videos</a></li>
+			<li><a href="prediction.html">Prediction</a></li>
+
 	      </ul>
 	    </nav>
 	</header>
@@ -21,6 +24,6 @@
 		<p><h6>03692 546</h6></p>
 	</section>
 
-	<footer>We care.</footer>
+	<footer>We are Engineers @ Embedded Project.</footer>
 </body>
 </html>
