--- a/prediction.html
+++ b/prediction.html
@@ -11,13 +11,15 @@
 	      <ul>
 	        <li><a href="index.html">Home</a></li>
 	        <li><a href="record.html">Record</a></li>
-	        <li>Prediction</li>
+			<li><a href="idea.html">Our-Idea</a></li>
+			<li><a href="Videos.html">Demo-Videos</a></li>
+			<li><a href="prediction.html">Prediction</a></li>
 	      </ul>
 	    </nav>
 	</header>
 	<section>
 		<img src="unwork.jpg" width="400px" height="300px" alt="site Under work.">
 	</section>
-	<footer>We care.</footer>
+	<footer>We are Engineers @ Embedded Project.</footer>
 </body>
 </html>
