--- a/record.html
+++ b/record.html
@@ -14,8 +14,11 @@
 	    <nav>
 	      <ul>
 	        <li><a href="index.html">Home</a></li>
-	        <li>Record</li>
-	        <li><a href="prediction.html">Prediction</a></li>
+			<li><a href="record.html">Record</a></li>
+			<li><a href="idea.html">Our-Idea</a></li>
+			<li><a href="Videos.html">Demo-Videos</a></li>
+			<li><a href="prediction.html">Prediction</a></li>
+
 	      </ul>
 	    </nav>
 	</header>
@@ -26,6 +29,6 @@
 	</form>
 	<img id="map_img" src="meter7.jpg" style="display: none;" width="400" height="400"/>
     <input type="submit" id="Map" value="Okay" onclick="showImg()"/>
-	<footer>We care.</footer>
+	<footer>We are Engineers @ Embedded Project.</footer>
 </body>
 </html>
