--- a/Videos.html
+++ b/Videos.html
@@ -17,9 +17,12 @@
 	    </nav>
 	</header>
 	<section>
-		<h1>heading</h1>
-		<img src="" width="400px" height="300px" alt="Meter picture">
-		<h1>heading</h1>
+        <h1>Dumb to Smart Meter Add-on by DeTech Hub  Industry 3.0</h1>
+        <video width="640" controls>
+        <source src="demo video.mp4" type="video/mp4">
+        <source src="demo video.mp4" type="video/ogg">
+        </video>
+
 	</section>
 
 	<footer>We are Engineers @ Embedded Project.</footer>
