--- a/Videos.html
+++ b/Videos.html
@@ -9,7 +9,6 @@
 	    <nav>
 	      <ul>
 	        <li><a href="index.html">Home</a></li>
-	        <li><a href="record.html">Record</a></li>
 			<li><a href="idea.html">Our-Idea</a></li>
 			<li><a href="Videos.html">Demo-Videos</a></li>
 			<li><a href="prediction.html">Prediction</a></li>
@@ -17,11 +16,17 @@
 	    </nav>
 	</header>
 	<section>
-        <h1>Dumb to Smart Meter Add-on by DeTech Hub  Industry 3.0</h1>
-        <video width="640" controls>
-        <source src="demo video.mp4" type="video/mp4">
-        <source src="demo video.mp4" type="video/ogg">
+		<h1>Software Simulation setup</h1>
+		<video width="640" controls>
+		<source src="demo video.mp4" type="video/mp4">
+		<source src="demo video.mp4" type="video/ogg">
+		</video>
+        <h1>Hardware Simulation setup</h1>
+        <video width="350" controls>
+        <source src="demo video v2.mp4" type="video/mp4">
+        <source src="demo video v2.mp4" type="video/ogg">
         </video>
+
 
 	</section>
 
