--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    </nav>
 	</header>
 	<section>
-		<h1>Current reading of your meter</h1>
+		<h1>Current reading of your meter test 1</h1>
 		<img src="image.bmp" width="400px" height="300px" alt="Meter picture">
 		<h1>Current reading in digits</h1>
 		<!-- <p><h6>999999</h6></p> -->
